# yew-sandbox

./: Cargo.toml  Makefile  index.html  main.js
pkg/: bundle.js  package.json  yew_sandbox.d.ts  yew_sandbox.js  yew_sandbox_bg.wasm  yew_sandbox_bg.wasm.d.ts
src/: app1.rs  app2.rs  lib.rs  manager.rs
