[package]
name = "yew-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4" }

yew-router = "0.16.0"
yew = "0.19"
gloo = "0.5"

js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Headers",
    "HtmlDocument",
    "Navigator",
    "Request",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "Window",
]
